[gd_scene load_steps=3 format=3 uid="uid://bgv4rjb34nvqq"]

[ext_resource type="Texture2D" uid="uid://cfoordp7qdkrx" path="res://assets/sprites/buttonTower1.png" id="1_8fcu8"]
[ext_resource type="Script" uid="uid://dkf5f0ol83jte" path="res://scripts/buy_tower_button.gd" id="2_50rvj"]

[node name="BuyTowerButton" type="TextureButton"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -447.0
offset_right = 398.0
grow_vertical = 0
scale = Vector2(0.220232, 0.216842)
tooltip_text = "Tower 1"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_8fcu8")
script = ExtResource("2_50rvj")

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 300.0
offset_right = 298.0
offset_bottom = 406.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
